# aviplayer

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  config.h  native-lib-jni.c  native-lib.c
app/src/main/cpp/avilib1_1_5/: CMakeLists.txt  avilib.c  avilib.h
app/src/main/java/com/czf/aviplayer/: MainActivity.java  NativeLibInterface.java  VideoActivity.java
app/src/main/res/layout/: activity_main.xml  activity_video.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
